--- a/src/HS2_ExtensibleSaveFormat/HS2_ExtensibleSaveFormat.csproj
+++ b/src/HS2_ExtensibleSaveFormat/HS2_ExtensibleSaveFormat.csproj
@@ -83,6 +83,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HS2.ExtendedSave.Hooks.cs" />
     <Compile Include="HS2.ExtendedSave.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
