--- a/src/KK_ConfigurationManager/KK_ConfigurationManager.csproj
+++ b/src/KK_ConfigurationManager/KK_ConfigurationManager.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ConfigurationManagerWrapper</RootNamespace>
-    <AssemblyName>KK_ConfigurationManager</AssemblyName>
+    <AssemblyName>ConfigurationManagerKK</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
