--- a/src/AI_Sideloader/packages.config
+++ b/src/AI_Sideloader/packages.config
@@ -7,8 +7,8 @@
   <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21.1" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.ImageConversionModule" version="2018.2.21.1" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.UnityWebRequestWWWModule" version="2018.2.21.1" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx" version="5.0.1.1" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx.Harmony" version="2.0.0-beta2" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx" version="5.3.0" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.0.6" targetFramework="net46" developmentDependency="true" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net46" />
   <package id="XUnity.Common" version="1.0.0" targetFramework="net46" developmentDependency="true" />
   <package id="XUnity.ResourceRedirector" version="1.1.0" targetFramework="net46" developmentDependency="true" />
