--- a/src/KKS_Sideloader/KKS_Sideloader.csproj
+++ b/src/KKS_Sideloader/KKS_Sideloader.csproj
@@ -19,7 +19,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\BepInEx\plugins\KK_BepisPlugins\</OutputPath>
+    <OutputPath>..\..\bin\BepInEx\plugins\KKS_BepisPlugins\</OutputPath>
     <DefineConstants>TRACE;DEBUG;KKS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -28,12 +28,12 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\BepInEx\plugins\KK_BepisPlugins\</OutputPath>
+    <OutputPath>..\..\bin\BepInEx\plugins\KKS_BepisPlugins\</OutputPath>
     <DefineConstants>TRACE;KKS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DocumentationFile>..\..\bin\BepInEx\plugins\KK_BepisPlugins\KKS_Sideloader.xml</DocumentationFile>
+    <DocumentationFile>..\..\bin\BepInEx\plugins\KKS_BepisPlugins\KKS_Sideloader.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.3.2.0, Culture=neutral, processorArchitecture=MSIL">
