--- a/src/KK_Screencap/KK_Screencap.csproj
+++ b/src/KK_Screencap/KK_Screencap.csproj
@@ -54,6 +54,7 @@
     </Reference>
     <Reference Include="PostProcessingRuntime">
       <HintPath>..\..\lib\PostProcessingRuntime.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
