--- a/src/KK_Screencap/KK_Screencap.csproj
+++ b/src/KK_Screencap/KK_Screencap.csproj
@@ -52,6 +52,10 @@
       <HintPath>..\..\packages\IllusionLibs.BepInEx.5.4.15\lib\net35\BepInEx.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="PostProcessingRuntime">
+      <HintPath>..\..\lib\PostProcessingRuntime.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
