--- a/src/HC_ConfigurationManager/HC_ConfigurationManager.csproj
+++ b/src/HC_ConfigurationManager/HC_ConfigurationManager.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>ConfigurationManagerWrapper</RootNamespace>
+    <OutputPath>..\..\bin\BepInEx\plugins\HC_BepisPlugins\</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -16,18 +20,25 @@
     <DefineConstants>$(DefineConstants);HC</DefineConstants>
   </PropertyGroup>
 
+  
+  <Target Name="AfterBuild" DependsOnTargets="GetMyOutputFiles">
+    <!--Copy one-to-one-->
+    <Copy SourceFiles="@(NativeLibs)" DestinationFiles="@(NativeLibs->'%(Destination)')" />
+  </Target>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Delete Files="$(OutputPath)\HC_ConfigurationManager.deps.json" />
+  </Target>
+
   <ItemGroup>
+    <!--BepInEx.ConfigurationManager is a BepInEx5 package and there's a compatibility warning about .NET version, but it actually works -->
+    <PackageReference Include="BepInEx.ConfigurationManager" Version="18.0.1" />
     <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.668" />
     <PackageReference Include="BepInEx.Unity.Mono.Preloader" Version="6.0.0-be.668" />
     <PackageReference Include="IllusionLibs.HoneyCome.Assembly-CSharp" Version="2023.16.10" />
     <PackageReference Include="IllusionLibs.HoneyCome.UnityEngine" Version="2021.3.14.2" />
+    <PackageReference Include="IllusionLibs.HoneyCome.UnityEngine.AudioModule" Version="2021.3.14.2" />
     <PackageReference Include="IllusionLibs.HoneyCome.UnityEngine.UI" Version="2021.3.14.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>..\..\..\RuntimeUnityEditor\Libs\IL2CPP_net6\UnityEngine.UI.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
   <Import Project="..\Shared\Shared.projitems" Label="Shared" />
